ported soups `soup_range` config to be a default luminance feature `range`